--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ categories: [blogging, github]
 <p>I know coding. But robots are always a mystery to me until early April 2025, two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project, when I built my first robot arm (so100). In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos and projects that I could only dreamed of at the start of April 2025. Below is a brief account of this journey.
 </p>
 
-<p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment is it to watch a lifeless arm sprang into life seeking and grasping!
+<p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/zxb1YeRxSYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
