--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ categories: [blogging, github]
 
 <h2>A Software Engineer's Journey to Robotics</h2>
 
-<p>I know coding. But robots are always a mystery to me until early April 2025, two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project, when I built my first robot arm (so100). In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos and projects that I could only dreamed of at the start of April 2025. Below is a brief account of this journey.
+<p>I know coding. But robots are always a mystery to me. Things started to change in early April 2025 when I built my first robot arm (so100) two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project. In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos and projects that I could only dreamed of at the start of April 2025. Below is a brief account of this journey.
 </p>
 
 <p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
