--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ As a software engineer generalist, I found it very amusing to watch pre-AI era r
 
 <h3>Epilogue</h3>
 <p>
-A big shout out to LeRobot for making robotics easily accessible to everyone. It's a game changer. Everyone with some coding skills can experience and learn the latest advancements in robotics.  
+A big shout out to LeRobot for making robotics easily accessible to everyone. It's a game changer. Anyone with some coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
 And the end of this blog is not the end of my robotics journey. The journey will certainly continue. Innovative ideas and discoveries pop up every day. There are so many things to explore. For example, reinforcement learning, especially HIL-SERL showed great promise in making the model robust and precise. I'm eager to see how far it can take so100 along this route.
