--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ With the help of the IK model, as well as Gemini Live, I could finally have a "H
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/zeroshot?src=hash&amp;ref_src=twsrc%5Etfw">#zeroshot</a> <a href="https://twitter.com/hashtag/so100?src=hash&amp;ref_src=twsrc%5Etfw">#so100</a><br>A robot that talks too much and pauses too often, yet performs tasks Zero Shot. No demonstration needed.<br><br>1/ Put things in a plate <a href="https://t.co/2Z26c4XUI9">pic.twitter.com/2Z26c4XUI9</a></p>&mdash; xun (@paszea) <a href="https://twitter.com/paszea/status/1933280906137240010?ref_src=twsrc%5Etfw">June 12, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <p>
-Below is another zero-shot demo where Gemini figured out "a point in front of Kerby." By harvesting the power of a "System 2", it saved much manual chores (teleoperation) for me, and will undoubtedly do in future for all of us.
+Below is another zero-shot demo where Gemini figured out "a point in front of Kerby." By harvesting the power of a "System 2", it saved much manual chore (teleoperation) for me, and will undoubtedly do so in future for all of us.
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/vGwoSGFgL0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -102,12 +102,12 @@ Below is another zero-shot demo where Gemini figured out "a point in front of Ke
 <p>
 As a software engineer generalist, I found it very amusing to watch pre-AI era robots playing soccer so awkwardly. Robotics was hard! But things have changed. Impressive robot demos pop up every day on Internet. Even my dreaming cloth folding robot is now a reality as demoed by Physical Intelligence, the company behind Pi0.
 </p>
-<p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us everywhere, in our homes, in our factories, helping us perform all kinds of useful work. As I worked on these projects and demos during the two-and-half-month journey,  I can't help but feel we are getting closer to this future each and every day.
+<p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us everywhere, in our homes, offices, and factories, helping us perform all kinds of useful tasks. As I worked on these projects and demos during the two-and-half-month journey, I can't help but feel we are at the cusp of this vision becoming reality.
 </p>
 
 <h3>Epilogue</h3>
 <p>
-A big shout out to LeRobot for making robotics easily accessible to everyone. It's a game changer. Anyone with some coding skills can now experience and learn the latest advancements in robotics.  
+A big shout out to LeRobot for making robotics easily accessible to everyone. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
 And the end of this blog is not the end of my robotics journey. The journey will certainly continue. Innovative ideas and discoveries pop up every day. There are so many things to explore. For example, reinforcement learning, especially HIL-SERL showed great promise in making the model robust and precise. I'm eager to see how far it can take so100 along this route.
