--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "A Software Engineer's Venture Into Robotics"
+title: "A Software Engineer's Adventure Into Robotics"
 date: 2025-06-16 10:00:00 -0700
 categories: [blogging, github]
 ---
 
-<h2>A Software Engineer's Venture into Robotics</h2>
+<h2>A Software Engineer's Adventure into Robotics</h2>
 
 <p><i>06/16/2025</i></p>
 <p>I know coding. But robots are always a mystery to me. Things started to change in early April 2025 when I built my first robot arm (so100) two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project. In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos and projects that I could only dream of at the start of April 2025. Below is a brief account of this journey.
