--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
----
-layout: post
-title: "A Software Engineer's Adventure Into Robotics"
-date: 2025-06-16 10:00:00 -0700
-categories: [blogging, github]
----
-
 <h2>A Software Engineer's Adventure into Robotics</h2>
 
 <p><i>06/16/2025</i></p>
@@ -45,7 +38,7 @@ Challenges now escalated to games! And it gave me the first opportunity to use L
 Yet at this point I didn't really know how to effectively train a VLA to control the robot to pick or place at a specific location especially when there are a large number of combinations. The usual language conditioning of ACT, Pi0 and N1, in my experiments, was not quite up to the task, at least not without a huge amount of data. As a result I resorted to manual prescription of a set of primitives, e.g. pick the first lego, put to top-right, etc. How to automate them using a model remained a struggle for me for a while.
 </p>
 <p>
-The struggle led me to conduct a series of experiments which led to an epiphany discovery of using bounding boxes (bbox) to condition ACT for precise control and accuracy:
+The struggle led me to conduct a series of experiments which led to an epiphany discovery of using bounding boxes (bbox) to condition ACT for precise control and accuracy (<a href="https://discord.com/channels/1216765309076115607/1237738269500899400/1367605706496282725">Details</a>):
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/dMTH0zFvFww" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
