--- a/index.html
+++ b/index.html
@@ -1,7 +1,45 @@
-<h2>A Software Engineer's Adventure into Robotics</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A Software Engineer's Adventure Into Robotics</title>
+    <style>
+        /* Styles for the body to remove default margins */
+        body {
+            margin: 0;
+            font-family: sans-serif;
+            background-color: #f4f4f4; /* Light background for the full page */
+        }
 
-<p><i>06/16/2025</i></p>
-<p>I know coding. But robots are always a mystery to me. Things started to change in early April 2025 when I built my first robot arm (so100) two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project. In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos and projects that I could only dream of at the start of April 2025. Below is a brief account of this journey.
+        /* Styles for the main content container */
+        .container {
+            max-width: 960px; /* Your desired maximum width */
+            margin: 0 auto;   /* Center the container horizontally */
+            padding: 20px;    /* Add some space around the content */
+            background-color: #ffffff; /* White background for the content area */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: subtle shadow */
+            box-sizing: border-box; /* Include padding in the element's total width */
+        }
+
+        /* Basic styling for demonstration content */
+        h1 {
+            color: #0b5394;
+        }
+
+        p {
+            line-height: 1.6;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+
+<h1>A Software Engineer's Adventure into Robotics</h1>
+
+<p style="color: #0b5394;"><i>06/16/2025</i></p>
+<p>I know coding. But robots are always a mystery to me. That started to change in early April 2025 when I built my first robot arm (so100) two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project. In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos and projects that I could only dream of at the start of April 2025. Below is a brief account of this journey.
 </p>
 
 <p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
@@ -100,9 +138,12 @@ As a software engineer generalist, I found it very amusing to watch pre-AI era r
 
 <h3>Epilogue</h3>
 <p>
-A big shout out to LeRobot for making robotics easily accessible to everyone. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
+I'd like to give a big shout out to LeRobot for making robotics easily accessible to everyone. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
 And the end of this blog is not the end of my robotics journey. The journey will certainly continue. Innovative ideas and discoveries pop up every day. There are so many things to explore. For example, reinforcement learning, especially HIL-SERL showed great promise in making the model robust and precise. It's now supported by LeRobot. I'm eager to see how far it can take so100 along this route.
 </p>
 
+</div>
+</body>
+</html>
