--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Software Engineer's Adventure Into Robotics Land</title>
+    <title>A Software Engineer's Adventure In Robot Land</title>
     <style>
         /* Styles for the body to remove default margins */
         body {
@@ -36,7 +36,7 @@
 <body>
 <div class="container">
 
-<h1>A Software Engineer's Adventure into Robotics Land</h1>
+<h1>A Software Engineer's Adventure In Robot Land</h1>
 
 <p style="color: #0b5394;"><i>06/17/2025</i></p>
 <p>I know coding. But robots are always a mystery to me. That started to change in early April 2025 when I built my first robot arm (so100) two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project. In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos and projects that I could only dream of at the start of April 2025. Below is a brief account of this journey.
