--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ As a software engineer generalist, I found it very amusing to watch pre-AI era r
 
 <h3>Epilogue</h3>
 <p>
-I'd like to give a big shout out to LeRobot for making robotics easily accessible to everyone. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
+I'd like to give a big shout out to LeRobot for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
 And the end of this blog is not the end of my robotics journey. The journey will certainly continue. Innovative ideas and discoveries pop up every day. There are so many things to explore. For example, reinforcement learning, especially HIL-SERL showed great promise in making the model robust and precise. It's now supported by LeRobot. I'm eager to see how far it can take so100 along this route.
