--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ As a software engineer generalist, I found it very amusing to watch pre-AI era r
 <p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops and offices, helping perform all kinds of useful tasks. As I worked on these projects during the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
 
-<h3>Epilogue</h3>
+<h3>A final note</h3>
 <p>
-I'd like to give a big shout out to LeRobot for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
+I'd like to give a big shout out to LeRobot team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
 And the end of this blog is not the end of my robotics journey. The journey will certainly continue. Innovative ideas and discoveries pop up every day. There are so many things to explore. For example, reinforcement learning, especially HIL-SERL showed great promise in making the model robust and precise. It's now supported by LeRobot. I'm eager to see how far it can take so100 along this route.
