--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h1>A Software Engineer's Adventure in Robot Land</h1>
 
 <p style="color: #0b5394;"><i>06/17/2025</i></p>
-<p>I know coding. But robots are always a mystery to me. That started to change in early April 2025, the first time I laid my hands on a robot arm, an so100 I built two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project. In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos that I could only dream of at the start of April 2025. Below is a brief account of this journey.
+<p>I know coding. But robots have always been a mystery to me. That started to change in early April 2025, the first time I laid my hands on a robot arm, a so100 I built two weeks after I learned about <a href="https://github.com/huggingface/lerobot">LeRobot</a> open source project. In the two and half months that followed, I felt like a child in a candy shop. I tinkered and experimented. I learned robotics and built demos that I could only dream of at the start of April 2025. Below is a brief account of this journey.
 </p>
 
 <p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
