--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ The struggle led me to conduct a series of experiments which led to an epiphany 
 </div>
 <p>
 I was quite excited by the discovery. It enabled me to easily build an agentic robot demo like the following. The robot chatted and fetched what's asked of it, and could recover from its failures.
+(underneath is an agentic flow powered by gemini live and tool detect_objects and pick_object which are simple wrappers around bbox detection and model inference.)
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/eOH3eSNxkfg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -131,7 +132,7 @@ Below is another zero-shot demo where Gemini figured out "a point in front of Ke
 </div>
 
 <p>
-As a software engineer generalist, I found it very amusing to watch pre-AI era robots playing soccer. They were spectacularly clumsy. Robotics was hard! But things are changing fast. Now impressive robot demos pop up every day on Internet. My dreaming cloth folding robot has long become a reality as demoed by Physical Intelligence, the company behind Pi0.
+Robotics was hard. As a software engineer generalist, I used to get very amused watching pre-AI era robots playing soccer. They were spectacularly clumsy. But things are changing fast. Now impressive robot demos pop up every day on Internet. My long dreamed cloth folding robot has become a reality a while ago as demoed by Physical Intelligence, the company behind Pi0.
 </p>
 <p>You could almost smell in the air that a robotic future is coming at us fast:  robots, all shapes and sizes, living with us in our homes, shops and offices, helping perform all kinds of useful tasks. As I worked on these projects during the two-and-half-month journey, I couldn't help but feel we are at the cusp of this vision becoming reality.
 </p>
