--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ The struggle led me to conduct a series of experiments which led to an epiphany 
 </div>
 <p>
 I was quite excited by the discovery. It enabled me to easily build an agentic robot demo like the following. The robot chatted and fetched what's asked of it, and could recover from its failures.
-(underneath is an agentic flow powered by gemini live and tool detect_objects and pick_object which are simple wrappers around bbox detection and model inference.)
+(underneath is an agentic flow powered by gemini live and two simple apis, detect_objects and pick_object, that wrap bbox detection and model inference.)
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/eOH3eSNxkfg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -91,6 +91,7 @@ I was quite excited by the discovery. It enabled me to easily build an agentic r
 
 <p>
 Agentic and autonomous robots are always facinating especially if you combine locomotion and manipulation. I developed another demo that had LeKiwi search the floor for legos to pick up. 
+(i didnt bother to train a model for locomotion. i simply asked gemini to go around in a specific order to find legos.)
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/6FK6Pl8VYmI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
