--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Robotics was hard. As a software engineer generalist, I used to get very amused 
 
 <h3>A final note</h3>
 <p>
-I'd like to give a big shout out to LeRobot team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
+I'd like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
 And the end of this blog is not the end of my robotics journey. The journey will continue. Innovative ideas and discoveries pop up every day. There are so many things to explore. For example, reinforcement learning, especially HIL-SERL showed great promise in making the model robust and precise. It's now supported by LeRobot. I'm eager to see how far it can take so100 along the way.
