--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Having had a taste of success, I ordered more parts and upgraded so100 to a mobi
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/4a2rNi7PvBs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>The model combined locomotion and manipulation. It's much harder to train. The success rate was low. And it didnt aleays follow instruction, e.g. went for wrong color.</i>
+<i>The model combined locomotion and manipulation. It's much harder to train. The success rate was low. And it didnt aleays follow instructions, e.g. went for wrong colored egg.</i>
 <p>
 Challenges now escalated to games! And it gave me the first opportunity to use LLM in a robot project. I called Gemini to help robot come up with moves by giving it snapshots of the board.
 </p>
@@ -92,7 +92,7 @@ I was quite excited by the discovery. It enabled me to easily build an agentic r
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/eOH3eSNxkfg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>(Underneath was an agentic flow powered by gemini live and two simple apis, detect_objects and pick_object, for bbox detection and model inference.)</i>
+<i>Underneath was an agentic flow powered by gemini live and two simple apis, detect_objects and pick_object, for bbox detection and model inference.</i>
 </p>
 
 <p>
@@ -101,7 +101,7 @@ Agentic and autonomous robots are always facinating especially if you combine lo
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/6FK6Pl8VYmI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>(I didnt bother to train a locomotion model. I simply asked gemini to go around in a specific order to find legos.)</i>
+<i>I didnt bother to train a locomotion model. I simply asked gemini to go around in a specific order to find legos.</i>
 <p>
 Seeing the success of bbox, I started to wonder whether images, which are the standard input to VLA, are really necessary in the presence of bbox? Could models do away with them? That led to the development of "Blind ACT".
 </p>
