--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Having had a taste of success, I ordered more parts and upgraded so100 to a mobi
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/4a2rNi7PvBs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>The model combined locomotion and manipulation. It's much harder to train. The success rate was low. And it didnt aleays follow instructions, e.g. went for wrong colored egg.</i>
+<i>The model combined locomotion and manipulation. It's much harder to train. The success rate was low. And it didnt always follow instructions, e.g. went for the wrong colored egg.</i>
 <p>
 Challenges now escalated to games! And it gave me the first opportunity to use LLM in a robot project. I called Gemini to help robot come up with moves by giving it snapshots of the board.
 </p>
