--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Robotics was hard. As a software engineer generalist, I used to get very amused 
 I'd like to give a big shout out to <a href="https://github.com/huggingface/lerobot">LeRobot</a> team for making robotics easily accessible. It's a game changer. Anyone with coding skills can now experience and learn the latest advancements in robotics.  
 </p>
 <p>
-And the end of this blog is certainly not the end of my robotics journey. It's just the start - so many more great ideas are waiting to be explored.
+And the end of this blog is certainly not the end of my robotics journey. It rather marks the start of the journey - there are so many more great ideas waiting to be explored in this wonderland.
 
 </div>
 </body>
