--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ The struggle led me to conduct a series of experiments which led to an epiphany 
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/dMTH0zFvFww" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>I started with 20 episodes as poc and increased it to 60 episodes. Then my so100 jaw broke and was replaced. i had to collect another 10 episodes to finetune the model for the differences caused by the new jaw. 
+<i>I started with 20 episodes as poc and increased it to 60 episodes. Then my so100 jaw broke and was replaced. I had to collect another 10 episodes to finetune the model for the differences caused by the new jaw. 
     <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Flekiwi_aug_grab">Dataset</a></i>
 <p>
-I was quite excited by the discovery. It enabled me to easily build an agentic robot demo like the following. The robot chatted and fetched what's asked of it, and could recover from its failures.
+I was quite excited by the discovery for the model also generalized. It enabled me to easily build an agentic robot demo like the following. The robot chatted and fetched what's asked of it, and could recover from its failures.
 
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/eOH3eSNxkfg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
