--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Eager for more, I quickly moved to a harder challenge: multi-lego pick-n-place. 
 <div class="video-container">
     <iframe width="560" height="325" src="https://www.youtube.com/embed/dLe7exy6cZU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>One overhead camera. Finetuned for 20k steps (2 hours.) Pretty impressive it worked so well. I also finetuned Pi0 using the same data but couldn't get it to work nearly as well. Maybe I didn't train it long enough.
+<i>One overhead camera. Finetuned for 20k steps (2 hours.) Pretty impressive it worked so well. I also finetuned Pi0 for 20k steps using the same data but couldn't get it to work nearly as well. Maybe I didn't train it long enough.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego_mix">Dataset</a></i>
 <p>
 Then Pi0. Pi0 was harder to train than N1. But it performed better than N1 if you could get it to work. The arm was less shaky and more precise under Pi0.
