--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Then Pi0. Pi0 was harder to train than N1. But it performed better than N1 if yo
     <iframe width="325" height="560" src="https://www.youtube.com/embed/JrbZqQxib5k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <i>This time with two cameras and trained for long (40k+ steps), Pi0 worked really well.
-Surprisingly N1 didn't.
+Surprisingly N1 didn't in this 2 camera setting.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego_2cam">Dataset</a></i>
 <p>
 Having had a taste of success, I ordered more parts and upgraded so100 to a mobile LeKiwi. By Easter, I trained the LeKiwi to hunt for eggs using Pi0.
