--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <h1>A Software Engineer's Adventure in Robot Land</h1>
 
-<p style="color: #0b5394;"><i>06/17/2025</i></p>
+<p style="color: #0b5394;"><i>Last modified: 06/18/2025</i></p>
 <p>I know coding. But robots have always been a mystery to me. That started to change in April 2025 after I built a pair of so100s. For the first time I had a real robot to play with. In the 2.5 months that followed, I tinkered, experimented, and built demos I could only dream of at the start of April. I felt like being pulled into a rabbit hole and came out to robot land.
 </p>
 
