--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h1>A Software Engineer's Adventure in Robot Land</h1>
 
 <i><p style="color: #0b5394;">Last modified 06/18/2025</p></i>
-<p>I know coding. But robots have always been a mystery to me. That started to change in April 2025 after I built a pair of so100s. For the first time I had a real robot to play with. In the 2.5 months that followed, I tinkered, experimented, and built demos I could only dream of at the start of April. I felt like being pulled into a rabbit hole and came out to robot land.
+<p>I know coding. But robots have always been a mystery to me. That started to change in April 2025 after I built a pair of so100s. For the first time I had a real robot to play with. In the 2.5 months that followed, I tinkered, experimented, and built demos I could only dream of at the start of April. I felt like being pulled into a rabbit hole and came out on robot land.
 </p>
 
 <p>I trained my first VLA model, ACT, soon after the arm was built. What a magic moment it was to watch a lifeless arm sprang into life seeking and grasping!
